--- a/security_merged.html
+++ b/security_merged.html
@@ -109,8 +109,15 @@
     <div class="page-wrapper">
       <div class="content-container">
         <div class="column-left">
-          <h1>Security &amp; Compliance Overview</h1>
-          <h2 class="sub-header long">At DroneLogbook.com, protecting your data is fundamental to our mission. We operate a comprehensive security program that governs our platform, infrastructure, and internal processes.</h2>
+          <h1>DroneLogbook.com Security & Compliance Overview</h1>
+          <h2 class="sub-header long">At DroneLogbook.com, protecting your data is fundamental to our mission. 
+            We operate a comprehensive security program that governs our platform, infrastructure, and internal processes. 
+            This framework is designed to preserve the confidentiality, integrity, and availability of the systems and 
+            information our users rely on, while aligning with applicable legal, industry, and contractual obligations.
+            <br>
+            We continuously evaluate and enhance our security posture through ongoing monitoring, independent assessments, 
+            and strict internal controls—ensuring that your operational and regulatory data remains safe at every stage.
+          </h2>
         </div>
       </div>
     </div>
@@ -126,65 +133,110 @@
           <p>We continuously evaluate and enhance our security posture through ongoing monitoring, independent assessments, and strict internal controls—ensuring that your operational and regulatory data remains safe at every stage.</p>
 
           <h2>SOC 2 Type II Compliance</h2>
-          <p>DroneLogbook.com is SOC 2 Type II compliant. The SOC 2 Type II examination provides an in-depth review of how an organization manages and protects customer information over an extended period. It is widely recognized as a leading benchmark for security practices across cloud service providers in the United States.</p>
-          <p>Achieving this certification demonstrates our dedication to maintaining strong internal controls and safeguarding all data processed on our platform. Our SOC 2 audit was conducted by an independent third-party firm, and a copy of the attestation report is available upon request for customers, partners, and approved prospects.</p>
+          <p>DroneLogbook.com is SOC 2 Type II compliant. The SOC 2 Type II examination provides an in-depth review of how an organization manages 
+            and protects customer information over an extended period. It is widely recognized as a leading benchmark for security practices across 
+            cloud service providers in the United States.
+          </p>
+          <p>Achieving this certification demonstrates our dedication to maintaining strong internal controls and safeguarding all data processed on 
+            our platform. Our SOC 2 audit was conducted by an independent third-party firm, and a copy of the attestation report is available upon 
+            request for customers, partners, and approved prospects.
+          </p>
 
-          <h2>AWS Best Practices &amp; Infrastructure Security</h2>
-          <p>Our platform is hosted on Amazon Web Services (AWS), leveraging a highly resilient and secure cloud environment trusted globally. By building on AWS, DroneLogbook.com benefits from a combination of advanced physical protections, industry-leading infrastructure security, and robust cloud-native tools.</p>
+          <h2>AWS Best Practices & Infrastructure Security</h2>
+          <p>Our platform is hosted on Amazon Web Services (AWS), leveraging a highly resilient and secure cloud environment trusted globally. 
+            By building on AWS, DroneLogbook.com benefits from a combination of advanced physical protections, industry-leading infrastructure security, 
+            and robust cloud-native tools.
+          </p>
 
-          <h3>Infrastructure Security</h3>
-          <ul>
-            <li>AWS data centers employ strict physical security measures, environmental controls, and continuous monitoring</li>
-            <li>Network segmentation uses VPCs, subnets, firewalls, and security groups to isolate and protect platform components</li>
-            <li>System uptime is supported through redundancy, load balancing, and high-availability architectures</li>
-            <li>Infrastructure is continuously monitored to identify potential threats or unusual activity</li>
-          </ul>
+          <h2>Infrastructure Security</h2>
+            <p>
+              • AWS data centers employ strict physical security measures, environmental controls, and continuous monitoring
+              <br>
+              • Network segmentation uses VPCs, subnets, firewalls, and security groups to isolate and protect platform components
+              <br>
+              • System uptime is supported through redundancy, load balancing, and high-availability architectures
+              <br>
+              • Infrastructure is continuously monitored to identify potential threats or unusual activity
+            </p>
 
-          <h3>Security Best Practices</h3>
-          <ul>
-            <li><strong>IAM least-privilege access:</strong> All system access is tightly controlled and restricted to the minimum required permissions</li>
-            <li><strong>Full encryption:</strong> Data at rest and in transit is encrypted using AWS-managed or platform-specific keys</li>
-            <li><strong>Routine patching:</strong> Servers and managed services are kept up to date with current security patches</li>
-            <li><strong>MFA for administrative access:</strong> Multi-factor authentication is required for elevated system privileges</li>
-            <li><strong>Continuous logging:</strong> AWS CloudTrail, GuardDuty, and CloudWatch provide audit trails, threat detection, and operational insights</li>
-            <li><strong>Automated backups:</strong> Versioned backups and disaster-recovery procedures protect data against loss</li>
-          </ul>
-          <p>Under the AWS shared responsibility model, AWS secures the cloud infrastructure, while DroneLogbook.com secures the data, configurations, and applications that run within it.</p>
+          <h2>Security Best Practices</h2>
+            <p>
+              • IAM least-privilege access: All system access is tightly controlled and restricted to the minimum required permissions
+              <br>
+              • Full encryption: Data at rest and in transit is encrypted using AWS-managed or platform-specific keys
+              <br>
+              • Routine patching: Servers and managed services are kept up to date with current security patches
+              <br>
+              •  MFA for administrative access: Multi-factor authentication is required for elevated system privileges
+              <br>
+              • Continuous logging: AWS CloudTrail, GuardDuty, and CloudWatch provide audit trails, threat detection, and operational insights
+              <br>
+              •  WAF protection: A Web Application Firewall (WAF) is used to help protect web-facing endpoints by filtering and monitoring HTTP(S) traffic and mitigating common web threats 
+              (e.g., injection attempts, abusive request patterns, and automated/bot traffic).
+              <br>
+              •  Automated backups: Versioned backups and disaster-recovery procedures protect data against loss
+            </p>
+            <p>Under the AWS shared responsibility model, AWS secures the cloud infrastructure, while DroneLogbook.com secures the data, 
+            configurations, and applications that run within it.
+            </p>
 
-          <h2>Application &amp; Customer Data Security</h2>
+          <h2>Application & Customer Data Security</h2>
           <p>DroneLogbook.com reinforces platform security through multiple layers of controls:</p>
-          <ul>
-            <li>All communication with the platform is encrypted end-to-end</li>
-            <li>Customer data is always encrypted, whether stored or in transit</li>
-            <li>Permissions and access rights follow strict least-privilege principles</li>
-            <li>Independent penetration tests are conducted annually, supplemented by frequent internal testing</li>
-            <li>Credentials are protected using strong hashing and salting techniques and stored in isolated databases</li>
-            <li>Regular vulnerability scans, code reviews, and automated security checks are embedded in the development workflow</li>
-            <li>A documented and practiced Incident Response Plan guides our actions in the event of a security issue</li>
-          </ul>
+            <p>
+              • All communication with the platform is encrypted end-to-end
+              <br>
+              • Customer data is always encrypted, whether stored or in transit
+              <br>
+              • Permissions and access rights follow strict least-privilege principles
+              <br>
+              • Independent penetration tests are conducted annually, supplemented by frequent internal testing
+              <br>
+              • Credentials are protected using strong hashing and salting techniques and stored in isolated databases
+              <br>
+              • Regular vulnerability scans, code reviews, and automated security checks are embedded in the development workflow
+              <br>
+              • A documented and practiced Incident Response Plan guides our actions in the event of a security issue
+            </p>
 
-          <h3>Application Monitoring &amp; Audit Logs</h3>
+          <h3>Application Monitoring & Audit Logs</h3>
           <p>Every action performed within the DroneLogbook.com environment—such as configuration changes, flight record updates, or system events—is logged and stored in an encrypted, tenant-specific database.</p>
           <p>These audit logs are available through the platform’s monitoring features, giving customers full visibility into their environment. DroneLogbook.com does not access this information unless a customer explicitly grants permission.</p>
 
-          <h2>Internal Security &amp; Governance</h2>
-          <h3>Policies &amp; Secure Development Practices</h3>
-          <ul>
-            <li>Our internal security policies define strict requirements for system usage, development, and data handling</li>
-            <li>Policies undergo scheduled reviews to ensure they reflect current standards and best practices</li>
-            <li>Our engineering team adheres to a structured Software Development Life Cycle (SDLC) that incorporates security at every stage</li>
-            <li>Developers receive specialized training on secure coding and follow rigorous peer-review processes</li>
-          </ul>
+          <h3>Internal Security & Governance</h3>
+          <h3>Policies & Secure Development Practices</h3>
+            <p>
+              • Our internal security policies define strict requirements for system usage, development, and data handling
+              <br>
+              • Policies undergo scheduled reviews to ensure they reflect current standards and best practices
+              <br>
+              • Developers receive specialized training on secure coding and follow rigorous peer-review processes
+            </p>
 
-          <h3>Employee Screening &amp; Access Controls</h3>
+          <h3>Employee Screening & Access Controls</h3>
           <p>To maintain trust and protect customer data, we implement strong personnel controls, including:</p>
-          <ul>
-            <li>Background checks prior to employment</li>
-            <li>Multi-stage evaluations by senior team members</li>
-            <li>Confidentiality agreements for all employees</li>
-            <li>Ongoing security training and access reassessments</li>
-          </ul>
+            <p>
+              • Background checks prior to employment
+              <br>
+              • Multi-stage evaluations by senior team members
+              <br>
+              • Confidentiality agreements for all employees
+              <br>
+              • Ongoing security training and access reassessments
+            </p>
 
+            <h3>On <b>SEO + AIO optimization: Yes—generally.</b> This version is well-structured with clear headings and includes high-intent terms 
+              buyers search for (e.g., <b>SOC 2 Type II, AWS security, encryption at rest/in transit, IAM least privilege, MFA, WAF, audit logs, 
+              incident response</b>). That said, if you want it maximized for SEO/AIO on a web page, the next step would be adding:
+            </h3>
+              <p>
+              • an SEO title + meta description
+              <br>
+              • an FAQ block (2–5 Q&As),
+              <br>
+              • and a short “Security at a glance” bullet summary near the top.
+              <br>
+              If you want, paste your target page title / URL slug and I’ll write those three pieces in the same tone.
+            </p>
         </div>
       </div>
     </div>
