--- a/security_merged.html
+++ b/security_merged.html
@@ -83,6 +83,7 @@
           <a href="partners.html" class="nav-link">Partners</a>
           <a href="innovation.html" class="nav-link">Innovation</a>
           <a href="faq.html" class="nav-link">FAQ </a>
+          <a href="security_merged.html" class="nav-link">Security</a>
           <a href="contact.php" class="nav-link">Contact Us </a>
           <a href="/profile/login.php" class="nav-link signIn">Sign In</a>
         </nav>
@@ -99,6 +100,7 @@
         <a href="partners.html" class="nav-link">Partners</a>
         <a href="innovation.html" class="nav-link">Innovation</a>
         <a href="faq.html" class="nav-link">FAQ </a>
+        <a href="security_merged.html" class="nav-link">Security</a>
         <a href="contact.php" class="nav-link">Contact Us </a>
         <a href="/profile/login.php" class="nav-link btn">Sign In</a>
       </nav>
