--- a/innovation.html
+++ b/innovation.html
@@ -139,10 +139,10 @@
             <br><br>
             <p>Once imported, logs are normalized into a consistent format so you can:</p>
             <ul>
-              <li>Auto-populate detailed flight records and pilot hours</li>
-              <li>Visualize GPS tracks and replay missions in 2D/3D</li>
-              <li>Feed data into BI dashboards or AI/ML analysis pipelines</li>
-              <li>Generate regulator-ready and customer-facing reports in a few clicks</li>
+              <li>• Auto-populate detailed flight records and pilot hours</li>
+              <li>• Visualize GPS tracks and replay missions in 2D/3D</li>
+              <li>• Feed data into BI dashboards or AI/ML analysis pipelines</li>
+              <li>• Generate regulator-ready and customer-facing reports in a few clicks</li>
             </ul>
           </div>
           <div class="ui-buttons">
@@ -153,12 +153,13 @@
           <div class="feature">
             <div class="feature-header">Join our supported platforms list</div>
             <div class="feature-sub-header">
-              <br />If you build drones, autopilots, or ground-control apps and want to offer customers seamless logging and compliance, 
+              <br>
+              If you build drones, autopilots, or ground-control apps and want to offer customers seamless logging and compliance, 
               DroneLogbook can be your integration partner. Connect through our APIs and import tools so operators can send flight data 
               directly into their DroneLogbook environment—no CSV exports or custom spreadsheets required. 
               <a href="https://www.dronelogbook.com/hp/1/innovation.html" style="color: black;"><u>dronelogbook.com</u></a>
-              <br /><br /><b>Hardware:</b> DJI, Parrot, Wingtra, SenseFly, Autel, Yuneec, Wingcopter, Vantage Robotics and more.
-              <br /><b>Software:</b> UGCS, DroneHarmony, Sky-Drones, Simnet, Zephyr, DroneLink, Flytbase, Q Ground Control, Mission Planner and more.
+              <br><br><b>Hardware:</b> DJI, Parrot, Wingtra, SenseFly, Autel, Yuneec, Wingcopter, Vantage Robotics and more.
+              <br><b>Software:</b> UGCS, DroneHarmony, Sky-Drones, Simnet, Zephyr, DroneLink, Flytbase, Q Ground Control, Mission Planner and more.
             </div>
           </div>
         </div>
@@ -186,11 +187,11 @@
             <br><br>
             <p>Within the private-label admin console you can:</p>
             <ul>
-              <li>Set operational rules and limits for flights and missions</li>
-              <li>Transfer aircraft, batteries, and data between groups or business units</li>
-              <li>Message users and teams and broadcast safety or policy updates</li>
-              <li>Receive notifications when flight or operational parameters are exceeded</li>
-              <li>Monitor compliance, documentation, and maintenance status through a central dashboard 
+              <li>• Set operational rules and limits for flights and missions</li>
+              <li>• Transfer aircraft, batteries, and data between groups or business units</li>
+              <li>• Message users and teams and broadcast safety or policy updates</li>
+              <li>• Receive notifications when flight or operational parameters are exceeded</li>
+              <li>• Monitor compliance, documentation, and maintenance status through a central dashboard 
                 <a href="https://www.dronelogbook.com/hp/1/innovation.html" style="color: black;"><u>dronelogbook.com</u></a>
               </li>
             </ul>
