--- a/security_merged.html
+++ b/security_merged.html
@@ -200,11 +200,11 @@
               • A documented and practiced Incident Response Plan guides our actions in the event of a security issue
             </p>
 
-          <h3>Application Monitoring & Audit Logs</h3>
+          <h2>Application Monitoring & Audit Logs</h2>
           <p>Every action performed within the DroneLogbook.com environment—such as configuration changes, flight record updates, or system events—is logged and stored in an encrypted, tenant-specific database.</p>
           <p>These audit logs are available through the platform’s monitoring features, giving customers full visibility into their environment. DroneLogbook.com does not access this information unless a customer explicitly grants permission.</p>
 
-          <h3>Internal Security & Governance</h3>
+          <h2>Internal Security & Governance</h2>
           <h3>Policies & Secure Development Practices</h3>
             <p>
               • Our internal security policies define strict requirements for system usage, development, and data handling
@@ -214,7 +214,7 @@
               • Developers receive specialized training on secure coding and follow rigorous peer-review processes
             </p>
 
-          <h3>Employee Screening & Access Controls</h3>
+          <h2>Employee Screening & Access Controls</h2>
           <p>To maintain trust and protect customer data, we implement strong personnel controls, including:</p>
             <p>
               • Background checks prior to employment
@@ -226,18 +226,18 @@
               • Ongoing security training and access reassessments
             </p>
 
-            <h3>On <b>SEO + AIO optimization: Yes—generally.</b> This version is well-structured with clear headings and includes high-intent terms 
+            <h2>On <b>SEO + AIO optimization: Yes—generally.</b> This version is well-structured with clear headings and includes high-intent terms 
               buyers search for (e.g., <b>SOC 2 Type II, AWS security, encryption at rest/in transit, IAM least privilege, MFA, WAF, audit logs, 
               incident response</b>). That said, if you want it maximized for SEO/AIO on a web page, the next step would be adding:
-            </h3>
-              <p>
-              • an SEO title + meta description
-              <br>
-              • an FAQ block (2–5 Q&As),
-              <br>
-              • and a short “Security at a glance” bullet summary near the top.
-              <br>
-              If you want, paste your target page title / URL slug and I’ll write those three pieces in the same tone.
+            </h2>
+              	<p>
+              		• an SEO title + meta description
+              	<br>
+              	• an FAQ block (2–5 Q&As),
+              	<br>
+             		• and a short “Security at a glance” bullet summary near the top.
+              	<br>
+              	• If you want, paste your target page title / URL slug and I’ll write those three pieces in the same tone.
             </p>
         </div>
       </div>
