--- a/security_merged.html
+++ b/security_merged.html
@@ -230,15 +230,15 @@
               buyers search for (e.g., <b>SOC 2 Type II, AWS security, encryption at rest/in transit, IAM least privilege, MFA, WAF, audit logs, 
               incident response</b>). That said, if you want it maximized for SEO/AIO on a web page, the next step would be adding:
             </h2>
-              	<p>
+              <p>
               		• an SEO title + meta description
               	<br>
               	• an FAQ block (2–5 Q&As),
               	<br>
              		• and a short “Security at a glance” bullet summary near the top.
               	<br>
-              	• If you want, paste your target page title / URL slug and I’ll write those three pieces in the same tone.
-            </p>
+              	If you want, paste your target page title / URL slug and I’ll write those three pieces in the same tone.
+            	</p>
         </div>
       </div>
     </div>
