--- a/solutions.html
+++ b/solutions.html
@@ -76,6 +76,7 @@
           <a href="partners.html" class="nav-link">Partners</a>
           <a href="innovation.html" class="nav-link">Innovation</a>
           <a href="faq.html" class="nav-link">FAQ </a>
+          <a href="security_merged.html" class="nav-link">Security</a>
           <a href="contact.php" class="nav-link">Contact Us </a>
           <a href="/profile/login.php" class="nav-link signIn">Sign In</a>
         </nav>
@@ -92,6 +93,7 @@
         <a href="partners.html" class="nav-link">Partners</a>
         <a href="innovation.html" class="nav-link">Innovation</a>
         <a href="faq.html" class="nav-link">FAQ </a>
+        <a href="security_merged.html" class="nav-link">Security</a>
         <a href="contact.php" class="nav-link">Contact Us </a>
         <a href="/profile/login.php" class="nav-link btn">Sign In</a>
       </nav>
