--- a/solutions.html
+++ b/solutions.html
@@ -259,12 +259,12 @@
             <div class="module-text" style="font-size: 16px; font-weight: 200; font-family: Roboto, sans-serif; color: #222;">
               <b>What Makes This Platform Different</b><br />
               <br /><b>Flexible Data Structure</b>
-              <ul>
-                <li>• Tailor flight types, equipment lists, and component tracking</li>
-                <li>• Build custom inspection forms, mission plans, and operational documents</li>
-                <li>• Generate advanced custom reports leveraging every data table</li>
-                <li>• Create your own checklists, forms, and risk assessment templates</li>
-              </ul>
+              
+              <li>• Tailor flight types, equipment lists, and component tracking</li>
+              <li>• Build custom inspection forms, mission plans, and operational documents</li>
+              <li>• Generate advanced custom reports leveraging every data table</li>
+              <li>• Create your own checklists, forms, and risk assessment templates</li>
+              
               <br /><b>Operational Control</b>
 
               <li>• Organize users into separate divisions with centralized administrative oversight</li>
@@ -274,7 +274,7 @@
             </div>
 
             <div class="module-text" style="font-size: 16px; font-weight: 200; font-family: Roboto, sans-serif; color: #222;">
-              <br><br><br><b>Administrative Benefits</b>
+              <br><br><b>Administrative Benefits</b>
 
               <li>Apply your branding to create a seamless user experience</li>
               <li>Utilize dedicated cloud hosting, including region-specific options</li>
