--- a/features.html
+++ b/features.html
@@ -140,7 +140,7 @@
           <div style="align-items: baseline; display: flex; justify-content: space-between; flex-wrap: wrap;">
             
             <div class="module-text" style="font-size: 16px; font-weight: 200; font-family: Roboto, sans-serif; color: #222;">
-              <br /><b>Private Label</b>
+              <br><b>Private Label</b>
               <ul>
                 <li>• Customizable drone component lists (Motors, Propellers (CW, CCW), ESCs, etc.)</li>
                 <li>• Customizable equipment list (Camera’s, Gimbles, Lidar, Battery Chargers, Cases, etc...)</li>
@@ -153,7 +153,7 @@
             </div>
 
             <div class="module-text" style="font-size: 16px; font-weight: 200; font-family: Roboto, sans-serif; color: #222;">
-              <br /><br /><b>All Servers</b>
+              <br><b>All Servers</b>
               <ul>
                 <li>• Create inspection schedules based on flights, hours or days as the trigger (2 of the 3 on one schedule)</li>
                 <li>• Add serial numbers to individual components</li>
@@ -178,8 +178,10 @@
             DroneLogbook works by importing flight logs via automated or manual telemetry importation or 
             non-telemetry flight logging (see our Drone Integration Hub for details by drone manufacturer) and then automatically tabulating the flight information against the following fields:
             <br><br>
-            <b>Asset:</b> Drone, Drone subcomponents, Batteries, Equipment. 
-            <b>Operations:</b> Mission Type, Operations Type, Operation Approval Type, Incidents, Personnel by Role. 
+            <b>Asset:</b> Drone, Drone subcomponents, Batteries, Equipment.
+            <br>
+            <b>Operations:</b> Mission Type, Operations Type, Operation Approval Type, Incidents, Personnel by Role.
+            <br>
             <b>Organization:</b> Organization ID, Project, Customer, Location.
 
             <br /><br />
@@ -193,8 +195,8 @@
             <br /><br />
             What this means for the end user is DroneLogbook can instantly provide detailed reporting across all operational areas.
             <ul>
-              <li style="margin-left: 20px;"><b>Compliance reporting</b> for all regulatory agencies: FAA, CAA, CASA, Transport Canada, DGCS </li>
-              <li style="margin-left: 20px;">Detailed Reporting for: <b>Incidents, Battery Charges, Pilot Activity, Drone Activity, Maintenance / Inspection, Project, Planned Missions, Inventory</b></li>
+              <li><b>Compliance reporting</b> for all regulatory agencies: FAA, CAA, CASA, Transport Canada, DGCS </li>
+              <li>Detailed Reporting for: <b>Incidents, Battery Charges, Pilot Activity, Drone Activity, Maintenance / Inspection, Project, Planned Missions, Inventory</b></li>
             </ul>
             <br />In addition to in depth reporting DroneLogbook provides the ability to be notified when procedures deviate from authorized operations. This includes items such as notifications if checklists aren’t completed as required, flights deviate from allowed parameters, compliance items are violated, documentation is expiring and many more proactive functions. This allows the user to concentrate on operations and dramatically reducing the time required to maintain compliance.
           </div>
@@ -258,7 +260,7 @@
           <div class="icon-boxes__content">
             <h4 class="icon-boxes__content-header">Manage your organization and pilots</h4>
             <p class="icon-boxes__content-text">Manage and monitor pilot currency. Store and track documents (pilot, organization). Share information within the organization.
-              <br />Advanced personnel profiling with skills and capabilities tracking (Regulations, Operations, Business cases and tools). Pre-defined skills and possibility to add custom ones.
+              <br>Advanced personnel profiling with skills and capabilities tracking (Regulations, Operations, Business cases and tools). Pre-defined skills and possibility to add custom ones.
             </p>
           </div>
         </div>
