--- a/features.html
+++ b/features.html
@@ -194,11 +194,15 @@
 
             <br /><br />
             What this means for the end user is DroneLogbook can instantly provide detailed reporting across all operational areas.
-            <ul>
-              <li><b>Compliance reporting</b> for all regulatory agencies: FAA, CAA, CASA, Transport Canada, DGCS </li>
-              <li>Detailed Reporting for: <b>Incidents, Battery Charges, Pilot Activity, Drone Activity, Maintenance / Inspection, Project, Planned Missions, Inventory</b></li>
-            </ul>
-            <br />In addition to in depth reporting DroneLogbook provides the ability to be notified when procedures deviate from authorized operations. This includes items such as notifications if checklists aren’t completed as required, flights deviate from allowed parameters, compliance items are violated, documentation is expiring and many more proactive functions. This allows the user to concentrate on operations and dramatically reducing the time required to maintain compliance.
+            <li><b>Compliance reporting</b> for all regulatory agencies: FAA, CAA, CASA, Transport Canada, DGCS </li>
+            <li>Detailed Reporting for: <b>Incidents, Battery Charges, Pilot Activity, Drone Activity, Maintenance / Inspection, Project, Planned Missions, Inventory</b></li>
+            <br>
+              <p>              
+            		In addition to in depth reporting DroneLogbook provides the ability to be notified when procedures deviate from authorized 
+              	operations. This includes items such as notifications if checklists aren’t completed as required, 
+              	flights deviate from allowed parameters, compliance items are violated, documentation is expiring and many more proactive 
+              	functions. This allows the user to concentrate on operations and dramatically reducing the time required to maintain compliance.
+              </p>
           </div>
         </div>
       </div>
