--- a/innovation.html
+++ b/innovation.html
@@ -151,7 +151,7 @@
         </div>
         <div class="column-right">
           <div class="feature">
-            <div class="feature-header">Join our supported platforms list</div>
+            <div class="content-header">Join our supported platforms list</div>
             <div class="feature-sub-header">
               <br>
               If you build drones, autopilots, or ground-control apps and want to offer customers seamless logging and compliance, 
@@ -222,7 +222,8 @@
             Whether you are flying under FAA, EASA, CASA, Transport Canada, or other civil aviation authorities, 
             the platform can be configured to support your compliance and reporting needs. 
             <a href="https://www.dronelogbook.com/hp/1/innovation.html" style="color: black;"><u>dronelogbook.com</u></a>
-            <br />Customer data is hosted on certified servers in multiple regions, helping organizations meet data-residency, 
+            <br><br>
+            Customer data is hosted on certified servers in multiple regions, helping organizations meet data-residency, 
             security, and privacy expectations while still benefiting from a single global platform. DroneLogbook is also rolling out 
             native-language versions of the application (including French, German, Portuguese, Spanish, and Italian), and we welcome 
             discussions with partners who want to represent DroneLogbook in additional non-English markets. 
