--- a/innovation.html
+++ b/innovation.html
@@ -138,10 +138,10 @@
             <a href="https://www.dronelogbook.com/hp/1/innovation.html" style="color: black;"><u>dronelogbook.com</u></a>
             <br><br>
             <p>Once imported, logs are normalized into a consistent format so you can:</p>
-            <li>• Auto-populate detailed flight records and pilot hours</li>
-            <li>• Visualize GPS tracks and replay missions in 2D/3D</li>
-          	<li>• Feed data into BI dashboards or AI/ML analysis pipelines</li>
-            <li>• Generate regulator-ready and customer-facing reports in a few clicks</li>
+            <li>Auto-populate detailed flight records and pilot hours</li>
+            <li>Visualize GPS tracks and replay missions in 2D/3D</li>
+          	<li>Feed data into BI dashboards or AI/ML analysis pipelines</li>
+            <li>Generate regulator-ready and customer-facing reports in a few clicks</li>
           </div>
           <div class="ui-buttons">
             <a href="contact.php" class="ui-black">Contact Us</a>
@@ -184,11 +184,11 @@
             <br><br>
             <p>Within the private-label admin console you can:</p>
             
-						<li>• Set operational rules and limits for flights and missions</li>
-          	<li>• Transfer aircraft, batteries, and data between groups or business units</li>
-          	<li>• Message users and teams and broadcast safety or policy updates</li>
-          	<li>• Receive notifications when flight or operational parameters are exceeded</li>
-        	 	 <li>• Monitor compliance, documentation, and maintenance status through a central dashboard 
+						<li>Set operational rules and limits for flights and missions</li>
+          	<li>Transfer aircraft, batteries, and data between groups or business units</li>
+          	<li>Message users and teams and broadcast safety or policy updates</li>
+          	<li>Receive notifications when flight or operational parameters are exceeded</li>
+        	  <li>Monitor compliance, documentation, and maintenance status through a central dashboard 
                 <a href="https://www.dronelogbook.com/hp/1/innovation.html" style="color: black;"><u>dronelogbook.com</u></a>
            	</li>
             <p>
